# ai

./: .custom_modes.bak.json  .gitignore  .roomodes  custom-modes_starter.json  pyproject.toml  pytest.ini  rawr.config.yaml  rawr.md  refactor_compiler_plan.md  refactoring_plan.md  requirements-dev.txt  requirements.txt  roo_agent_mode_config.md  tips.llm  wundergraph-llm.txt
.ai/context/: agent_orchestration_system.md
.roo/: mcp.json
agents/architect/: agent_architect.md  agent_diagram.md  agent_install-arch.md
agents/code/: agent_git.md  agent_git_support.md  agent_implement.md
agents/design/: agent_position_coach.md
agents/document/: agent_plan.md
ai/: todo.md
cli/: README.md  compiler.py  config.yaml  config_loader.py  constants.py  exceptions.py  main.py  manage_agent_configs.py  models.py  registry_manager.py  todo.md
compiler_refactor/: 01_safety_net.md  02_carve_metadata.md  03_loader_validator.md  04_registry_bridge.md  05_core_module.md  06_cli_module.md  07_deprecate_legacy.md  README.md  current_progress.md
devlogs/: 2025-04-06_create-entry-kg-entity.md  2025-04-06_update-roo-agent-mode-config.md
docs/: agent_config_conventions.md
rawr_registry/: custom_modes.json
scripts/: README.md  cli_config.yaml  generate_agent_configs.py  manage_agent_configs.py
tests/: conftest.py  constants.py  refactoring_validation_process.md  test_add_command.py  test_cli_args.py  test_config_handling.py  test_delete_command.py  test_example.py  test_installation.py  test_manage_agent_configs.py  test_manage_agent_configs_plan.md  test_update_command.py
(+275 files in other folders)
